moved to S3 (Build script still uploads) More attempts to fix the java/lang/string error
Signed-off-by: Cayde Dixon <cayde.dixon@gmail.com>